# robot_ws

./: .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  install.sh
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: build  clean  deploy_robot_ws.sh  entrypoint.sh  fix_permission.sh
src/rover_bringup/: CMakeLists.txt  package.xml
src/rover_bringup/launch/: display.launch.py
src/rover_bringup/rviz/: urdf.rviz
src/rover_control/: CMakeLists.txt  package.xml
src/rover_control/config/: control.yaml
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/urdf/: rover.urdf.xacro
src/rover_gazebo/: CMakeLists.txt  package.xml
src/rover_gazebo/launch/: sim.launch.py
src/waveshare_driver/: CMakeLists.txt  package.xml
