<?xml version="1.0"?>
<package format="3">
  <name>waveshare_driver</name>
  <version>0.0.0</version>
  <description>Waveshare generic driver (squelette)</description>
  <maintainer email="57549027+xylophone97@users.noreply.github.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export/>
</package>
